--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "ava": {
     "files": [
+      "**/*.test.js",
       "**/*.spec.js"
     ]
   },
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "acorn": "^8.4.1",
-    "ava": "^3.15.0"
+    "ava": "^3.15.0",
+    "conclure": "^2.0.0"
   }
 }
